temporary fix for main menu on mobile

--- a/public/css/friluft.css
+++ b/public/css/friluft.css
@@ -4811,7 +4811,8 @@ body {
   body.with-menu {
     left: 70%;
     overflow-x: hidden;
-    overflow-y: hidden; }
+    overflow-y: hidden;
+    position: fixed; }
     body.with-menu #menu-overlay {
       background-color: rgba(0, 0, 0, 0.5);
       pointer-events: auto;
