--- a/resources/assets/sass/base/modules/header.sass
+++ b/resources/assets/sass/base/modules/header.sass
@@ -277,6 +277,7 @@ body
 		left: 70%
 		overflow-x: hidden
 		overflow-y: hidden
+		position: fixed
 
 		#menu-overlay
 			background-color: rgba(0,0,0,0.5)
